--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,8 @@ body  {
   grid-gap: .5rem;
   margin: auto;
   padding: 1rem;
+  max-width: 100vw;
+  justify-content: center;
  
 }
 
@@ -82,4 +84,50 @@ body  {
 
 #add_book_modal {
   display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5)
+}
+
+#modal_content  {
+  background-color: var(--color-5);
+  margin: 10% auto;
+  width: 200px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+
+#modal_content > form {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+#modalButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: .6rem;
+}
+
+.modalBtn {
+  width: 40%;
+}
+
+#modal_close_btn  {
+  color: var(--color-3);
+  text-align: right;
+  margin-right: .3rem;
+}
+
+#modal_close_btn:hover  {
+  color: var(--color-1);
+  cursor: pointer;
 }
