--- a/src/App.css
+++ b/src/App.css
@@ -43,33 +43,54 @@ body  {
   background-color: var(--color-5);
   color: var(--color-4);
   padding: .2rem;
-  width: 15em;
-  height: 12em;
+  width: 10em;
+  height: 10em;
   line-height: 1.2rem;
   border-radius: 5%;
-  box-shadow: 0 5px 7px rgba(10 10 10 .2)
+  box-shadow: 0 5px 7px rgba(10 10 10 .2);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-#book_card_title  {
+.book_card_title  {
   font-size: 1.2rem;
   font-weight: bold;
   font-style: italic;
   margin-left: .3rem;
   margin-top: .5rem;
   margin-bottom: 0;
+  height: 25%;
 }
 
-#book_card_author {
-  font-size: 1.2rem;
-  text-align: right;
+.book_card_author {
+  font-size: 1rem;
   margin-right: .5rem;
   margin-left: .3rem;
+  font-style: italic;
 }
 
-#book_card_genre  {
-  font-size: .8rem;
-  text-align: right;
-  margin-right: .3rem;
+.book_card_btns {
+  width: 100%;
+  height: 30%;
+  justify-content: baseline;
+}
+
+.remove_book_btn  {
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+  border: 1px solid var(--color-4);
+  border-radius: 5%;
+}
+
+.change_status_btn  {
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+  border: 1px solid var(--color-4);
+  border-radius: 5%;
+}
+
+.remove_book_btn:hover, .change_status_btn:hover  {
+  cursor: pointer;
+  background-color: var(--color-2)
 }
 
 #library_controls  {
@@ -79,7 +100,8 @@ body  {
 
 #add_book_button  {
   margin-left: auto;
-  margin-right: 2rem;  
+  margin-right: 5px;
+  margin-top: 5px;  
 }
 
 #add_book_modal {
